####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = swirly
swirly_SOURCES = dcdis.c symtab.c decode.c shfpu.s scramble.c main.cpp Spu.cpp SHTmu.cpp SHSci.cpp SHMmu.cpp SHIntc.cpp SHDmac.cpp SHCpu.cpp SHBsc.cpp Overlord.cpp Maple.cpp Gpu.cpp Gdrom.cpp Debugger.cpp 
swirly_LDADD   = -lSDL -lGL


EXTRA_DIST = Debugger.cpp Debugger.h Gdrom.cpp Gdrom.h Gpu.cpp Gpu.h Maple.cpp Maple.h Overlord.cpp Overlord.h SHBsc.cpp SHBsc.h SHCpu.cpp SHCpu.h SHDmac.cpp SHDmac.h SHIntc.cpp SHIntc.h SHMmu.cpp SHMmu.h SHSci.cpp SHSci.h SHTmu.cpp SHTmu.h Spu.cpp Spu.h main.cpp scramble.c scramble.h swirly.h shfpu.s dcdis.h decode.c sh7091.h symtab.c dcdis.c 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = swirly

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
swirly_LDFLAGS = $(all_libraries) 
                                                                                
